--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   }
 
 .content {
-  height: 300px;
+  height: 150px;
   width: 600px;
   position: relative;
   text-align: left;
@@ -33,15 +33,16 @@
     margin: 0 auto;
     padding: 0 auto;
   }
-aside {
+
+nav {
   height: 150px;
   width: 150px;
-    position: fixed;
-    margin: 20px;
+    position: sticky;
+    margin: 0 auto;
     left: 1200px;
-    top: 100px;
     text-align:left;
 }
+
  li {
   list-style: none;
  }
@@ -59,8 +60,8 @@ aside {
 
 footer {
   height: 50px;
-  width: 1500px;
-  position:fixed;
+  width: 1400px;
+  position: fixed;
   margin: 0 auto;
   top: 600px;
   left: -50px;
