--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
   body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
       Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
+    padding: 0 auto;
     min-height: 100vh;
     background-color: #000000;
     color: #9ad79b;
@@ -25,7 +25,7 @@
 }
   header {
     height: 50px;
-    width: 1500px;
+    width: 1350px;
     background-color: #9ad79b;
     color:beige;
     text-align:left;
@@ -58,14 +58,13 @@ nav {
     padding: 10px;
 }
 
-footer {
-  height: 50px;
-  width: 1400px;
-  position: fixed;
-  margin: 0 auto;
+.footer {
+  height: 30px;
+  width: 1350px;
+  position: static;
   top: 600px;
   left: -50px;
   background-color:#9ad79b;
   color:black;
-  text-align: center;
+  text-align:center;
 }
